2017-November-26 Struan Robertson

		* IrreversibleExchangeReaction.cpp: Further changes to irreversible exchange reaction type
		to allow for simple canonical rate expressions.

		* examples/*.xml: All example input files altered to use "RRKM" rather than "SimpleRRKM".

2017-November-25 Struan Robertson

		* IrreversibleExchangeReaction.cpp/.h: Further simplification of the 
		irreversible exchange reaction type in preparation for the addition of new canonical
		terms.

		* MesmerQA/*.xml: All MesmerQA input files altered to use "RRKM" rather than "SimpleRRKM".

2017-November-22 Struan Robertson

		* IrreversibleExchangeReaction.cpp/.h, benzene_oxidation_test.xml: Correction and tidy-up of 
		irreversible exchange reaction type and example in preparation for the addition of new canonical
		terms.

2017-November-02 Chris Morley

    * mesmer1.xsl, rawdataplot.xsl: display rawdata plots
    * src/ConditionsManager.cpp, src/ConditionsManager.h: rewrite signal,etc. in fixed format if necessary
    * schemas/mesmer.xsd: update for rawData
    * src/Persistence.h, src/XMLPersist.cpp, src/XMLPersist.h: Add XmlDeleteElement().
    * src/gDensityOfStates.cpp: small reformat of a log message

2017-October-29 Struan Robertson

		* ClassicalCoupledRotors.cpp, HinderedRotorUtils.cpp/.h: Tidying-up of coupled rotors.

		* ConditionsManager.cpp/.h, FittingUtils.cpp: Corrected number of degrees of freedom for
		trace data. 

2017-October-22 Struan Robertson

		* ClassicalCoupledRotors.cpp, HinderedRotorUtils.cpp/.h, HinderedRotorQM1D.cpp,
		HinderedRotorCM1D.cpp: Addition of numerical potential energy contribution for coupled rotors.

2017-October-15 Struan Robertson

		* ClassicalCoupledRotors.cpp, HinderedRotorUtils.cpp/.h: Addition of potential energy 
		contribution for coupled rotors.

2017-October-10 Struan Robertson

		* ClassicalCoupledRotors.cpp: Minor corrections to thermodynamic functions for coupled rotors.

2017-October-08 Struan Robertson
