@@ -726,6 +726,7 @@ src/plugins/AdiabaticCurve.h -text
 src/plugins/AnalyticalRepresentation.cpp -text
 src/plugins/BeyerSwinehart.cpp -text
 src/plugins/BoltzmannDistribution.cpp -text
+src/plugins/CanonicalRateCoefficient.cpp -text
 src/plugins/ClassicalCoupledRotors.cpp -text
 src/plugins/ClassicalRotor.cpp -text
 src/plugins/DefinedDensityOfStates.cpp -text
